packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_derived_signals_multiple_children.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2805
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@khulnasoft.com/unisynth';

import {dep} from './file';

export const App = component$(() => {
    const signal = useSignal(0);
    const store = useStore({});
    return (
        <>
            <div>First text</div>
            <div>First {`text`}</div>
            <div>First {1}</div>
            <div>First {true}</div>
            <div>First {`text${12}`}</div>
            <div>First {typeof `text${12}` === 'string' ? 12 : 43}</div>
            <div>First {signal}</div>
            <div>First {signal.value}</div>
            <div>First {12 + signal.value}</div>
            <div>First {store.address.city.name}</div>
            <div>First {store.address.city.name ? 'true' : 'false'}</div>
            <div>First {dep}</div>
            <div>First {dep.thing}</div>
            <div>First {dep.thing + 'stuff'}</div>
            <div>First {globalThing}</div>
            <div>First {globalThing.thing}</div>
            <div>First {globalThing.thing + 'stuff'}</div>
            <div>First {signal.value()}</div>
            <div>First {signal.value + unknown()}</div>
            <div>First {mutable(signal)}</div>
            <div>First {signal.value + dep}</div>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { _fnSignal } from "@khulnasoft.com/unisynth";
import { _jsxC } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
import { Fragment as _Fragment } from "@khulnasoft.com/unisynth/jsx-runtime";
import { useStore, mutable } from '@khulnasoft.com/unisynth';
import { dep } from './file';
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", null, null, "First text", 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                `text`
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                1
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                true
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                `text${12}`
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                typeof `text${12}` === 'string' ? 12 : 43
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                signal
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                _fnSignal((p0)=>p0.value, [
                    signal
                ], "p0.value")
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                _fnSignal((p0)=>12 + p0.value, [
                    signal
                ], "12+p0.value")
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                _fnSignal((p0)=>p0.address.city.name, [
                    store
                ], "p0.address.city.name")
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                _fnSignal((p0)=>p0.address.city.name ? 'true' : 'false', [
                    store
                ], 'p0.address.city.name?"true":"false"')
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                dep
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                dep.thing
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                dep.thing + 'stuff'
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                globalThing
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                globalThing.thing
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                globalThing.thing + 'stuff'
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                signal.value()
            ], 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                signal.value + unknown()
            ], 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                mutable(signal)
            ], 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "First ",
                signal.value + dep
            ], 1, null)
        ]
    }, 1, "u6_0");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,mBAAmB;AAEjE,SAAQ,GAAG,QAAO,SAAS;kCAEG;IAC1B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACI;;0BACI,MAAC,mBAAI;0BACL,MAAC;gBAAI;gBAAO,CAAC,IAAI,CAAC;;0BAClB,MAAC;gBAAI;gBAAO;;0BACZ,MAAC;gBAAI;gBAAO;;0BACZ,MAAC;gBAAI;gBAAO,CAAC,IAAI,EAAE,GAAG,CAAC;;0BACvB,MAAC;gBAAI;gBAAO,OAAO,CAAC,IAAI,EAAE,GAAG,CAAC,KAAK,WAAW,KAAK;;0BACnD,MAAC;gBAAI;gBAAO;;0BACZ,MAAC;gBAAI;gCAAO,GAAO,KAAK;;;;0BACxB,MAAC;gBAAI;gCAAO,KAAK,GAAO,KAAK;;;;0BAC7B,MAAC;gBAAI;gCAAO,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;;;0BACnC,MAAC;gBAAI;gCAAO,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;;;0BAC/C,MAAC;gBAAI;gBAAO;;0BACZ,MAAC;gBAAI;gBAAO,IAAI,KAAK;;0BACrB,MAAC;gBAAI;gBAAO,IAAI,KAAK,GAAG;;0BACxB,MAAC;gBAAI;gBAAO;;0BACZ,MAAC;gBAAI;gBAAO,YAAY,KAAK;;0BAC7B,MAAC;gBAAI;gBAAO,YAAY,KAAK,GAAG;;0BAChC,MAAC;gBAAI;gBAAO,OAAO,KAAK;;0BACxB,MAAC;gBAAI;gBAAO,OAAO,KAAK,GAAG;;0BAC3B,MAAC;gBAAI;gBAAO,QAAQ;;0BACpB,MAAC;gBAAI;gBAAO,OAAO,KAAK,GAAG;;;;AAGvC;AA5BA,OAAO,MAAM,oBAAM,+FA4BhB\"}")
== DIAGNOSTICS ==

[]
