packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_dev_mode.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2187
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/unisynth';

export const App = component$(() => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Unisynth</p>
        </Cmp>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrlDEV } from "@khulnasoft.com/unisynth";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0", {
    file: "/user/unisynth/src/test.tsx",
    lo: 90,
    hi: 229,
    displayName: "test.tsx_App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM;;;;;IAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxC } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { qrlDEV } from "@khulnasoft.com/unisynth";
export const App_component_ckEPmXZlub0 = ()=>{
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto"), "App_component_Cmp_p_onClick_vuXzfUTkpto", {
                file: "/user/unisynth/src/test.tsx",
                lo: 164,
                hi: 189,
                displayName: "test.tsx_App_component_Cmp_p_onClick"
            })
        }, "Hello Unisynth", 3, null, {
            fileName: "test.tsx",
            lineNumber: 7,
            columnNumber: 13
        })
    }, 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 9
    });
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B;IAC1B,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ;;;;;;WAA6B;;;;;;;;;;AAGlE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    229
  ]
}
*/
============================= test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto.js (ENTRY POINT)==

export const App_component_Cmp_p_onClick_vuXzfUTkpto = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAMuC,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_onClick_vuXzfUTkpto",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_onClick",
  "hash": "vuXzfUTkpto",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    164,
    189
  ]
}
*/
== DIAGNOSTICS ==

[]
