packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_drop_side_effects.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 710
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/unisynth';
import { server$ } from '@khulnasoft.com/unisynth-city';
import { clientSupabase } from 'supabase';
import { Client } from 'openai';
import { secret } from './secret';
import { sideEffect } from './secret';

const supabase = clientSupabase();
const dfd = new Client(secret);

(function() {
    console.log('run');
  })();
  (() => {
    console.log('run');
  })();

sideEffect();

export const api = server$(() => {
    supabase.from('ffg').do(dfd);
});

export default component$(() => {
    return (
      <button onClick$={() => await api()}></button>
    )
  });

============================= test.js ==

import { serverQrl } from "@khulnasoft.com/unisynth-city";
import { _noopQrlDEV } from "@khulnasoft.com/unisynth";
import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrlDEV } from "@khulnasoft.com/unisynth";
import { sideEffect } from './secret';
(function() {
    console.log('run');
})();
(()=>{
    console.log('run');
})();
sideEffect();
export const api = serverQrl(/*#__PURE__*/ _noopQrlDEV("api_server_JonPp043gH0", {
    file: "/user/unisynth/src/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_api_server"
}));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg", {
    file: "/user/unisynth/src/test.tsx",
    lo: 522,
    hi: 605,
    displayName: "test.tsx_test_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAMA,SAAS,UAAU,QAAQ,WAAW;AAKtC,CAAC;IACG,QAAQ,GAAG,CAAC;AACd,CAAC;AACD,CAAC;IACC,QAAQ,GAAG,CAAC;AACd,CAAC;AAEH;AAEA,OAAO,MAAM,MAAM;;;;;IAEhB;AAEH,6BAAe;;;;;IAIV\"}")
============================= test.tsx_test_component_button_onClick_DGk9xLyRokA.js (ENTRY POINT)==

import { api } from "./test";
export const test_component_button_onClick_DGk9xLyRokA = ()=>await api();


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";yDA0BwB,IAAM,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_onClick_DGk9xLyRokA",
  "entry": null,
  "displayName": "test.tsx_test_component_button_onClick",
  "hash": "DGk9xLyRokA",
  "canonicalFilename": "test.tsx_test_component_button_onClick_DGk9xLyRokA",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    567,
    584
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxQ } from "@khulnasoft.com/unisynth";
import { qrlDEV } from "@khulnasoft.com/unisynth";
export const test_component_LUXeXe0DQrg = ()=>{
    return /*#__PURE__*/ _jsxQ("button", null, {
        onClick$: /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_test_component_button_onClick_DGk9xLyRokA"), "test_component_button_onClick_DGk9xLyRokA", {
            file: "/user/unisynth/src/test.tsx",
            lo: 567,
            hi: 584,
            displayName: "test.tsx_test_component_button_onClick"
        })
    }, null, 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 27,
        columnNumber: 7
    });
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAwB0B;IACtB,qBACE,MAAC;QAAO,QAAQ;;;;;;;;;;;AAEpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    522,
    605
  ]
}
*/
== DIAGNOSTICS ==

[]
