packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_exports.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 984
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/unisynth';

export const [a, {b, v1: [c], d=v2, ...e}, f=v3, ...g] = obj;

const exp1 = 1;
const internal = 2;
export {exp1, internal as expr2};

export function foo() { }
export class bar {}

export default function DefaultFn() {}

export const Header = component$(() => {
    return $(() => (
        <Footer>
            <div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
            <div>{v1}{v2}{v3}{obj}</div>
        </Footer>
    ))
});

export const Footer = component$();

============================= project/test.tsx_Header_component_UVBJuFYfvDo.jsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/unisynth";
export const Header_component_UVBJuFYfvDo = ()=>{
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_1_uWM1kg0IGO0"), "Header_component_1_uWM1kg0IGO0");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";4CAciC;IAC7B;AAMJ\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "test.tsx_Header_component_UVBJuFYfvDo",
  "path": "project",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    307,
    499
  ]
}
*/
============================= project/test.jsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const [a, { b, v1: [c], d = v2, ...e }, f = v3, ...g] = obj;
const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };
export function foo() {}
export class bar {
}
export default function DefaultFn() {}
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_UVBJuFYfvDo"), "Header_component_UVBJuFYfvDo"));
export const Footer = /*#__PURE__*/ componentQrl();


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,CAAC,GAAG,EAAC,CAAC,EAAE,IAAI,CAAC,EAAE,EAAE,IAAE,EAAE,EAAE,GAAG,GAAE,EAAE,IAAE,EAAE,EAAE,GAAG,EAAE,GAAG,IAAI;AAE7D,MAAM,OAAO;AACb,MAAM,WAAW;AACjB,SAAQ,IAAI,EAAE,YAAY,KAAK,GAAE;AAEjC,OAAO,SAAS,OAAQ;AACxB,OAAO,MAAM;AAAK;AAElB,eAAe,SAAS,aAAa;AAErC,OAAO,MAAM,uBAAS,uHAOnB;AAEH,OAAO,MAAM,uBAAS,eAAa\"}")
============================= project/test.tsx_Header_component_1_uWM1kg0IGO0.jsx (ENTRY POINT)==

import { default as DefaultFn } from "./test";
import { Footer } from "./test";
import { a } from "./test";
import { b } from "./test";
import { bar } from "./test";
import { c } from "./test";
import { d } from "./test";
import { e } from "./test";
import { exp1 } from "./test";
import { f } from "./test";
import { foo } from "./test";
import { expr2 as internal } from "./test";
export const Header_component_1_uWM1kg0IGO0 = ()=><Footer>
            <div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
            <div>{v1}{v2}{v3}{obj}</div>
        </Footer>;
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;8CAea,KACJ,OAAO;YACJ,CAAC,KAAK,GAAG,GAAG,GAAG,GAAG,GAAG,GAAG,MAAM,UAAU,KAAK,KAAK,YAAY,IAAI;YAClE,CAAC,KAAK,IAAI,IAAI,IAAI,MAAM,IAAI;QAChC,EAAE\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_1_uWM1kg0IGO0",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "uWM1kg0IGO0",
  "canonicalFilename": "test.tsx_Header_component_1_uWM1kg0IGO0",
  "path": "project",
  "extension": "jsx",
  "parent": "Header_component_UVBJuFYfvDo",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    328,
    496
  ]
}
*/
== DIAGNOSTICS ==

[]
